--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This is a basic static HTML website hosted on GitHub Pages.</p>
-    <!-- Add your website content here -->
+
+     <!-- Links to other HTML pages -->
+    <ul>
+        <li><a href="learn_biomarker_analysis.html">Page 1</a></li>
+        <li><a href="learn_biostatistics.html">Page 2</a></li>
+        <li><a href="learn_clinical_trials.html">Page 3</a></li>
+    </ul><!-- Add your website content here -->
 </body>
 </html>
