--- a/index.html
+++ b/index.html
@@ -4,18 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Yubing's DigiDao Universe</title>
     <!-- Add any additional head content here (e.g., CSS links, scripts) -->
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a basic static HTML website hosted on GitHub Pages.</p>
+    <header>
+        <h1>Welcome to My Website!</h1>
+        <nav>
+            <ul>
+                <li><a href="#tutorials">Tutorials</a></li>
+                <li><a href="#blogs">Blogs</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#personal">Personal</a></li>
+            </ul>
+        </nav>
+    </header>
 
-     <!-- Links to other HTML pages -->
-    <ul>
-        <li><a href="learn_biomarker_analysis.html">Page 1</a></li>
-        <li><a href="learn_biostatistics.html">Page 2</a></li>
-        <li><a href="learn_clinical_trials.html">Page 3</a></li>
-    </ul><!-- Add your website content here -->
+    <section id="tutorials">
+        <h2>Tutorials</h2>
+        <!-- Links to tutorial pages -->
+        <ul>
+            <li><a href="learn_biomarker_analysis.html">Biomarker Analysis</a></li>
+            <li><a href="learn_biostatistics.html">Biostatistics</a></li>
+            <li><a href="learn_clinical_trials.html">Clinical Trials</a></li>
+        </ul>
+    </ul>
+    </section>
+
+    <section id="blogs">
+        <h2>Blogs</h2>
+        <!-- Links to blog pages or blog content -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <!-- Contact information or a contact form -->
+    </section>
+
+    <section id="personal">
+        <h2>Personal</h2>
+        <!-- Personal information, links, or content -->
+    </section>
 </body>
 </html>
