--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yubing's DigiDao Universe</title>
     <!-- Add any additional head content here (e.g., CSS links, scripts) -->
+    <style>
+        body {
+            background-color: lightblue;
+        }
+        
+        h1 {
+            color: navy;
+            margin-left: 20px;
+        }
+        
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 10px;
+        }
+
+        section {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-top: 20px;
+        }
+    </style>
+
 </head>
+
 <body>
     <header>
         <h1>Welcome to My Website!</h1>
