--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- Add any additional head content here (e.g., CSS links, scripts) -->
     <style>
         body {
-            background-color: lightblue;
+            background-color: lightgreen;
         }
         
         h1 {
-            color: navy;
+            color: darkgreen;
             margin-left: 20px;
         }
         
