--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Add any additional head content here (e.g., CSS links, scripts) -->
     <style>
         body {
-            background-color: lightgreen;
+          <!--  background-color: lightgreen; -->
         }
         
         h1 {
@@ -48,6 +48,20 @@
         </nav>
     </header>
 
+    <section id="personal">
+        <h2>Personal</h2>
+        <!-- Personal information, links, or content -->
+        <p>Hello! I'm Yubing Wan. Welcome to my digital (digiDao) Universe</p>
+        <p>I'm a data scientist and biostatistican with a passion for clinical trials, biomarker analysis, machine learning and AI. In my free time, I enjoy playing basketball, working out, reading books, watching videos.</p>
+        <p>Feel free to connect with me at wan.yubing@gmail.com.</p>
+    <!-- You can add links to your social media profiles or projects here -->
+    </section>
+
+    <section id="blogs">
+        <h2>Blogs</h2>
+        <!-- Links to blog pages or blog content -->
+    </section>
+
     <section id="tutorials">
         <h2>Tutorials</h2>
         <!-- Links to tutorial pages -->
@@ -56,22 +70,13 @@
             <li><a href="learn_biostatistics.html">Biostatistics</a></li>
             <li><a href="learn_clinical_trials.html">Clinical Trials</a></li>
         </ul>
-    </ul>
-    </section>
-
-    <section id="blogs">
-        <h2>Blogs</h2>
-        <!-- Links to blog pages or blog content -->
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
+        <p>To reach out, please send an email to wan.yubing@gmail.com.</p>
         <!-- Contact information or a contact form -->
     </section>
 
-    <section id="personal">
-        <h2>Personal</h2>
-        <!-- Personal information, links, or content -->
-    </section>
-</body>
+   </body>
 </html>
