--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <h1>Welcome to My Website!</h1>
         <nav>
             <ul>
-                <li><a href="#tutorials">Tutorials</a></li>
-                <li><a href="#blogs">Blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#personal">Personal</a></li>
+                <li><a href="#blogs">Blogs</a></li>
+                <li><a href="#tutorials">Tutorials</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -51,9 +51,9 @@
     <section id="personal">
         <h2>Personal</h2>
         <!-- Personal information, links, or content -->
-        <p>Hello! I'm Yubing Wan. Welcome to my digital (digiDao) Universe</p>
-        <p>I'm a data scientist and biostatistican with a passion for clinical trials, biomarker analysis, machine learning and AI. In my free time, I enjoy playing basketball, working out, reading books, watching videos.</p>
-        <p>Feel free to connect with me at wan.yubing@gmail.com.</p>
+        <p>My name Yubing Wan. Welcome to my Digital (DigiDao) World</p>
+        <p>I'm a data scientist and biostatistician with a passion for Machine Learning, AI, Clinical Trial Research, Biomarker Analysis. In my free time, I enjoy playing basketball, working out, reading books, watching YouTube videos, etc.</p>
+        <p>Feel free to connect with me at <a href="https://www.linkedin.com/in/yubingwan/" target="_blank">LinkedIn</a> or check out my projects at <a href="https://github.com/yubingwan" target="_blank">Github</a>.</p>
     <!-- You can add links to your social media profiles or projects here -->
     </section>
 
