--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yubing's DigiDao Universe</title>
+    <title>Yubing's DigiDao World</title>
     <!-- Add any additional head content here (e.g., CSS links, scripts) -->
     <style>
         body {
@@ -51,8 +51,8 @@
     <section id="personal">
         <h2>Personal</h2>
         <!-- Personal information, links, or content -->
-        <p>My name Yubing Wan. Welcome to my Digital (DigiDao) World</p>
-        <p>I'm a data scientist and biostatistician with a passion for Machine Learning, AI, Clinical Trial Research, Biomarker Analysis. In my free time, I enjoy playing basketball, working out, reading books, watching YouTube videos, etc.</p>
+        <p>My name Yubing Wan. Welcome to my DigiDao (digital) World</p>
+        <p>I'm a Data Scientist and Biostatistician with a passion for Machine Learning, AI, Clinical Trial Research, Biomarker Analysis. In my free time, I enjoy playing basketball, working out, reading books, watching YouTube videos, etc.</p>
         <p>Feel free to connect with me at <a href="https://www.linkedin.com/in/yubingwan/" target="_blank">LinkedIn</a> or check out my projects at <a href="https://github.com/yubingwan" target="_blank">Github</a>.</p>
     <!-- You can add links to your social media profiles or projects here -->
     </section>
