--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <section id="personal">
         <h2>Personal</h2>
         <!-- Personal information, links, or content -->
-        <p>My name Yubing Wan. Welcome to my DigiDao (digital) World</p>
-        <p>I'm a Data Scientist and Biostatistician with a passion for Machine Learning, AI, Clinical Trial Research, Biomarker Analysis. In my free time, I enjoy playing basketball, working out, reading books, watching YouTube videos, etc.</p>
-        <p>Feel free to connect with me at <a href="https://www.linkedin.com/in/yubingwan/" target="_blank">LinkedIn</a> or check out my projects at <a href="https://github.com/yubingwan" target="_blank">Github</a>.</p>
+        <p>My name Yubing Wan. Welcome to my DigiDao (digital) World.</p>
+        <p>I'm a Data Scientist and Biostatistician with a passion for Machine Learning, AI, Clinical Trial Research, Biomarker Analysis.</p>
+        <p>In my free time, I enjoy playing basketball, working out, reading books, watching YouTube videos, ...</p>
+        <p>Please feel free to connect with me at <a href="https://www.linkedin.com/in/yubingwan/" target="_blank">LinkedIn</a> or check out my projects at <a href="https://github.com/yubingwan" target="_blank">Github</a>.</p>
     <!-- You can add links to your social media profiles or projects here -->
     </section>
 
