add learning notes for python

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a href="learn_biomarker_analysis.html">Biomarker Analysis</a></li>
             <li><a href="learn_biostatistics.html">Biostatistics</a></li>
             <li><a href="learn_clinical_trials.html">Clinical Trials</a></li>
+            <li><a href="learn_python.html">Programming in Python</a></li>
         </ul>
     </section>
 
