--- a/learn_clinical_trials.html
+++ b/learn_clinical_trials.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-01-30 Tue 13:13 -->
+<!-- 2024-02-17 Sat 15:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Clinical Trials</title>
@@ -233,43 +233,43 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2c0f7d3">1. Phases</a>
+<li><a href="#org2bb3a0d">1. Phases</a>
 <ul>
-<li><a href="#org12d8587">1.1. Summary of Different Phases</a></li>
-<li><a href="#orgd2bd06d">1.2. General Biostatistician Aspects to Consider Across Phases</a></li>
+<li><a href="#orgaacac80">1.1. Summary of Different Phases</a></li>
+<li><a href="#org09c3ed6">1.2. General Biostatistician Aspects to Consider Across Phases</a></li>
 </ul>
 </li>
-<li><a href="#org8cd9e84">2. Data</a>
+<li><a href="#orgb52403c">2. Data</a>
 <ul>
-<li><a href="#org60f82b2">2.1. Sample Data</a>
+<li><a href="#orgd364a0d">2.1. Sample Data</a>
 <ul>
-<li><a href="#orgdfdacca">2.1.1. Type of Sample Data in Clinical Trials</a></li>
-<li><a href="#orgaacec50">2.1.2. Endpoints in Different Therapeutic Areas</a></li>
+<li><a href="#org15d597d">2.1.1. Type of Sample Data in Clinical Trials</a></li>
+<li><a href="#orgf4dbb91">2.1.2. Endpoints in Different Therapeutic Areas</a></li>
 </ul>
 </li>
-<li><a href="#org03b10bc">2.2. Biomarker Data</a></li>
+<li><a href="#org969c2a6">2.2. Biomarker Data</a></li>
 </ul>
 </li>
-<li><a href="#org00927bc">3. Preclinical/Nonclinical Trials</a>
+<li><a href="#org89c908f">3. Preclinical/Nonclinical Trials</a>
 <ul>
-<li><a href="#orga613071">3.1. Key Biomarker</a>
+<li><a href="#org7cae301">3.1. Key Biomarker</a>
 <ul>
-<li><a href="#org108d2f6">3.1.1. Pharmacokinetics (PK)</a></li>
-<li><a href="#org939ff30">3.1.2. Pharmacodynamics (PD)</a></li>
+<li><a href="#org23eaf6e">3.1.1. Pharmacokinetics (PK)</a></li>
+<li><a href="#org6907482">3.1.2. Pharmacodynamics (PD)</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org47b0385">4. References</a></li>
+<li><a href="#orgb6296cb">4. References</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2c0f7d3" class="outline-2">
-<h2 id="org2c0f7d3"><span class="section-number-2">1.</span> Phases</h2>
+<div id="outline-container-org2bb3a0d" class="outline-2">
+<h2 id="org2bb3a0d"><span class="section-number-2">1.</span> Phases</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org12d8587" class="outline-3">
-<h3 id="org12d8587"><span class="section-number-3">1.1.</span> Summary of Different Phases</h3>
+<div id="outline-container-orgaacac80" class="outline-3">
+<h3 id="orgaacac80"><span class="section-number-3">1.1.</span> Summary of Different Phases</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Clinical trials are conducted in distinct phases, each with specific characteristics, objectives, and study designs.
@@ -306,8 +306,8 @@ Clinical trials are conducted in distinct phases, each with specific characteris
 </ol>
 </div>
 </div>
-<div id="outline-container-orgd2bd06d" class="outline-3">
-<h3 id="orgd2bd06d"><span class="section-number-3">1.2.</span> General Biostatistician Aspects to Consider Across Phases</h3>
+<div id="outline-container-org09c3ed6" class="outline-3">
+<h3 id="org09c3ed6"><span class="section-number-3">1.2.</span> General Biostatistician Aspects to Consider Across Phases</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><b>Sample Size Determination:</b> Crucial in all phases for ensuring statistical power.</li>
@@ -325,12 +325,12 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </div>
 </div>
 </div>
-<div id="outline-container-org8cd9e84" class="outline-2">
-<h2 id="org8cd9e84"><span class="section-number-2">2.</span> Data</h2>
+<div id="outline-container-orgb52403c" class="outline-2">
+<h2 id="orgb52403c"><span class="section-number-2">2.</span> Data</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org60f82b2" class="outline-3">
-<h3 id="org60f82b2"><span class="section-number-3">2.1.</span> Sample Data</h3>
+<div id="outline-container-orgd364a0d" class="outline-3">
+<h3 id="orgd364a0d"><span class="section-number-3">2.1.</span> Sample Data</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><b>Defination:</b>
@@ -351,8 +351,8 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </ul></li>
 </ul>
 </div>
-<div id="outline-container-orgdfdacca" class="outline-4">
-<h4 id="orgdfdacca"><span class="section-number-4">2.1.1.</span> Type of Sample Data in Clinical Trials</h4>
+<div id="outline-container-org15d597d" class="outline-4">
+<h4 id="org15d597d"><span class="section-number-4">2.1.1.</span> Type of Sample Data in Clinical Trials</h4>
 <div class="outline-text-4" id="text-2-1-1">
 <ol class="org-ol">
 <li>Particular Demographics:
@@ -448,8 +448,8 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </ol>
 </div>
 </div>
-<div id="outline-container-orgaacec50" class="outline-4">
-<h4 id="orgaacec50"><span class="section-number-4">2.1.2.</span> Endpoints in Different Therapeutic Areas</h4>
+<div id="outline-container-orgf4dbb91" class="outline-4">
+<h4 id="orgf4dbb91"><span class="section-number-4">2.1.2.</span> Endpoints in Different Therapeutic Areas</h4>
 <div class="outline-text-4" id="text-2-1-2">
 <ul class="org-ul">
 <li>Oncology
@@ -478,6 +478,8 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 <li>Multiple programs have been created to expedite drug approval for life-threatening illnesses, including advanced cancer.</li>
 <li>ORR and PFS have been accepted by the FDA as adequate predictors of OS on which to base drug approval decisions, thus substantially shortening the time and cost of drug development (1).</li>
 <li>Use of imaging surrogate markers for drug approval has become increasingly common, accounting for more than 90% of approvals through the Accelerated Approval Program and allowing for use of many therapies which have altered the course of cancer.</li>
+<li><a href="https://www.aimetrics.com/comparing-ai-metrics-to-manual-methods/">Comparing AI Metrics to Manual Methods</a>
+AI Metrics increased reporting accuracy by 25%, reduced errors by 99%, cut interpretation time in half, increased inter-observer agreement among oncologists by 58% and among radiologists by 45%, and was preferred by 96% of radiologists and 100% of oncologists compared to current practice with manual image assessments and text reports. In a study of the beta version of the AI Metrics Platform (called eMASS; included guided workflows and annotation tools, but no AI algorithms), eMASS reduced errors and time of evaluation was twice as fast, which indicated better overall effectiveness than standard of care, manual tumor response evaluation methods for three different therapy response criteria.</li>
 </ul></li>
 </ul></li>
 
@@ -488,8 +490,8 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </div>
 </div>
 </div>
-<div id="outline-container-org03b10bc" class="outline-3">
-<h3 id="org03b10bc"><span class="section-number-3">2.2.</span> Biomarker Data</h3>
+<div id="outline-container-org969c2a6" class="outline-3">
+<h3 id="org969c2a6"><span class="section-number-3">2.2.</span> Biomarker Data</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><b>Defination:</b> Biomarker data refers specifically to data that is indicative of a biological state or condition. Biomarkers (short for biological markers) are measurable indicators of some biological state or condition. They can be molecules, genes, gene products, enzymes, hormones, or other substances whose presence or concentration can be measured in biological samples like blood, tissue, or urine.</li>
@@ -498,20 +500,20 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </div>
 </div>
 </div>
-<div id="outline-container-org00927bc" class="outline-2">
-<h2 id="org00927bc"><span class="section-number-2">3.</span> Preclinical/Nonclinical Trials</h2>
+<div id="outline-container-org89c908f" class="outline-2">
+<h2 id="org89c908f"><span class="section-number-2">3.</span> Preclinical/Nonclinical Trials</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-orga613071" class="outline-3">
-<h3 id="orga613071"><span class="section-number-3">3.1.</span> Key Biomarker</h3>
+<div id="outline-container-org7cae301" class="outline-3">
+<h3 id="org7cae301"><span class="section-number-3">3.1.</span> Key Biomarker</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
-<div id="outline-container-org108d2f6" class="outline-4">
-<h4 id="org108d2f6"><span class="section-number-4">3.1.1.</span> Pharmacokinetics (PK)</h4>
+<div id="outline-container-org23eaf6e" class="outline-4">
+<h4 id="org23eaf6e"><span class="section-number-4">3.1.1.</span> Pharmacokinetics (PK)</h4>
 <div class="outline-text-4" id="text-3-1-1">
 </div>
 <ol class="org-ol">
-<li><a id="org5417ca3"></a>Parameters<br />
+<li><a id="orga044177"></a>Parameters<br />
 <div class="outline-text-5" id="text-3-1-1-1">
 <ul class="org-ul">
 <li><b>Concentration-Time Data:</b> fundamental PK data, including the concentrations of the drug in blood, plasma, or other biological fluids over time. These data are used to calculate various parameters</li>
@@ -528,12 +530,12 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </li>
 </ol>
 </div>
-<div id="outline-container-org939ff30" class="outline-4">
-<h4 id="org939ff30"><span class="section-number-4">3.1.2.</span> Pharmacodynamics (PD)</h4>
+<div id="outline-container-org6907482" class="outline-4">
+<h4 id="org6907482"><span class="section-number-4">3.1.2.</span> Pharmacodynamics (PD)</h4>
 <div class="outline-text-4" id="text-3-1-2">
 </div>
 <ol class="org-ol">
-<li><a id="org7030347"></a>Parameters<br />
+<li><a id="org7a9d93c"></a>Parameters<br />
 <div class="outline-text-5" id="text-3-1-2-1">
 <ul class="org-ul">
 <li><b>Effect Size / Response Magnitude:</b> The degree of biological or cinical response observed after drug administration.
@@ -575,8 +577,8 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </div>
 </div>
 </div>
-<div id="outline-container-org47b0385" class="outline-2">
-<h2 id="org47b0385"><span class="section-number-2">4.</span> References</h2>
+<div id="outline-container-orgb6296cb" class="outline-2">
+<h2 id="orgb6296cb"><span class="section-number-2">4.</span> References</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 (1) Hsiue EHC, Moore TJ, Alexander GC. Estimated costs of pivotal trials for U.S. Food and Drug Administration-approved cancer drugs, 2015-2017. Clin Trials 2020;17(2):119–125. Crossref, Medline, Google Scholar
@@ -586,7 +588,7 @@ Each phase of a clinical trial has distinct statistical considerations. Biostati
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Yubing Wan</p>
-<p class="date">Created: 2024-01-30 Tue 13:13</p>
+<p class="date">Created: 2024-02-17 Sat 15:57</p>
 </div>
 </body>
 </html>
