--- a/learn_python.html
+++ b/learn_python.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-01-28 Sun 16:51 -->
+<!-- 2024-02-17 Sat 15:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Python</title>
@@ -201,22 +201,28 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2e8a6b3">1. Basic Concepts and Terminoloy</a>
+<li><a href="#orgd335f59">1. Basic Concepts and Terminoloy</a>
 <ul>
-<li><a href="#orgaa6772a">1.1. Scripts, Modules, Packages, and Libraries</a></li>
-<li><a href="#org5c6918e">1.2. Virtual Environments</a></li>
-<li><a href="#org01b26ba">1.3. Class</a></li>
+<li><a href="#orgd0b0ffd">1.1. Scripts, Modules, Packages, and Libraries</a></li>
+<li><a href="#org7686613">1.2. Virtual Environments</a></li>
+<li><a href="#org00ad481">1.3. Class</a></li>
+<li><a href="#org9c5e733">1.4. Conda or venv</a>
+<ul>
+<li><a href="#orgf2d21d6">1.4.1. Choosing Between `venv` and `conda`:</a></li>
+<li><a href="#org8f8b96b">1.4.2. Best Practices:</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2e8a6b3" class="outline-2">
-<h2 id="org2e8a6b3"><span class="section-number-2">1.</span> Basic Concepts and Terminoloy</h2>
+<div id="outline-container-orgd335f59" class="outline-2">
+<h2 id="orgd335f59"><span class="section-number-2">1.</span> Basic Concepts and Terminoloy</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgaa6772a" class="outline-3">
-<h3 id="orgaa6772a"><span class="section-number-3">1.1.</span> Scripts, Modules, Packages, and Libraries</h3>
+<div id="outline-container-orgd0b0ffd" class="outline-3">
+<h3 id="orgd0b0ffd"><span class="section-number-3">1.1.</span> Scripts, Modules, Packages, and Libraries</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>Script: a Python file that is executable direclty. When run it, it should do something. Scripts often contains code written outside the scope of any classes or functions.</li>
@@ -229,8 +235,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org5c6918e" class="outline-3">
-<h3 id="org5c6918e"><span class="section-number-3">1.2.</span> Virtual Environments</h3>
+<div id="outline-container-org7686613" class="outline-3">
+<h3 id="org7686613"><span class="section-number-3">1.2.</span> Virtual Environments</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>A isolated container with a Python interpreter, PIP executable, and site-package directory</li>
@@ -242,8 +248,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org01b26ba" class="outline-3">
-<h3 id="org01b26ba"><span class="section-number-3">1.3.</span> Class</h3>
+<div id="outline-container-org00ad481" class="outline-3">
+<h3 id="org00ad481"><span class="section-number-3">1.3.</span> Class</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li>a blueprint for creating objects (a particular data structure), providing initial values for state (member variables or attributes), and implementations of behavior (member functions or methods)</li>
@@ -256,27 +262,55 @@ Define a Class
 
 <div class="org-src-container">
 <pre class="src src-python">     <span style="color: #51afef;">class</span> <span style="color: #ECBE7B;">MyClass</span>:
-     <span style="color: #51afef;">def</span> <span style="color: #c678dd;">__init__</span>(<span style="color: #51afef;">self</span>, attribute):
-         <span style="color: #51afef;">self</span>.<span style="color: #dcaeea;">attribute</span> = attribute
+         <span style="color: #51afef;">def</span> <span style="color: #c678dd;">__init__</span>(<span style="color: #51afef;">self</span>, attribute):
+             <span style="color: #51afef;">self</span>.<span style="color: #dcaeea;">attribute</span> = attribute
 
-     <span style="color: #51afef;">def</span> <span style="color: #c678dd;">method</span>(<span style="color: #51afef;">self</span>):
-         <span style="color: #51afef;">return</span> f<span style="color: #98be65;">"Value: </span>{<span style="color: #51afef;">self</span>.attribute}<span style="color: #98be65;">"</span>
+         <span style="color: #51afef;">def</span> <span style="color: #c678dd;">method</span>(<span style="color: #51afef;">self</span>):
+             <span style="color: #51afef;">return</span> <span style="color: #98be65;">"Value: {self.attribute}"</span>
 </pre>
-</div>
+</div></li>
 
+<li><p>
+<b>Create an INstance:</b> You create an instance of the class by calling the class name and passing arguments it expects.
+</p>
 <div class="org-src-container">
-<pre class="src src-R">     print(<span style="color: #98be65;">"Hello, world!"</span>)
+<pre class="src src-python">     <span style="color: #dcaeea;">my_instance</span> = MyClass(<span style="color: #98be65;">"Hello"</span>)
 </pre>
 </div></li>
 </ol></li>
 </ul>
 </div>
 </div>
+<div id="outline-container-org9c5e733" class="outline-3">
+<h3 id="org9c5e733"><span class="section-number-3">1.4.</span> Conda or venv</h3>
+<div class="outline-text-3" id="text-1-4">
+</div>
+<div id="outline-container-orgf2d21d6" class="outline-4">
+<h4 id="orgf2d21d6"><span class="section-number-4">1.4.1.</span> Choosing Between `venv` and `conda`:</h4>
+<div class="outline-text-4" id="text-1-4-1">
+<ul class="org-ul">
+<li><b>Specific Python Version:</b> Both conda and venv can be used to create environments with specific Python versions. With conda, you can directly specify the Python version when creating a new environment. With venv, you&rsquo;re typically using the Python version venv was created with, but you can install different versions of Python and then create venv environments with those versions.</li>
+
+<li><b>Project Needs:</b> If your project requires packages that are difficult to compile or are not available on PyPI but are available through conda, or if you need to manage packages from languages other than Python, conda might be the better choice. For pure Python projects, especially those intended to run in environments where conda is not available or desired, venv is sufficient and lightweight.</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org8f8b96b" class="outline-4">
+<h4 id="org8f8b96b"><span class="section-number-4">1.4.2.</span> Best Practices:</h4>
+<div class="outline-text-4" id="text-1-4-2">
+<ul class="org-ul">
+<li><b>Stick to One:</b> Try to manage your project with either conda or venv/pip exclusively, if possible. This simplifies environment management and reduces the risk of dependency conflicts.</li>
+<li><b>Document Your Environment:</b> Whether you choose conda, venv, or a mix of conda and pip, document your environment setup and dependencies clearly. If using conda, you can export an environment file with conda env export &gt; environment.yml. If using venv, you can list your dependencies in a requirements.txt file with pip freeze &gt; requirements.txt.</li>
+<li><b>Consistency Across Team:</b> Ensure that all team members are using the same environment management tool and setup to avoid &ldquo;it works on my machine&rdquo; problems.</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Yubing Wan</p>
-<p class="date">Created: 2024-01-28 Sun 16:51</p>
+<p class="date">Created: 2024-02-17 Sat 15:55</p>
 </div>
 </body>
 </html>
