--- a/learn_python.html
+++ b/learn_python.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-17 Sat 15:55 -->
+<!-- 2024-02-17 Sat 16:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Python</title>
@@ -201,15 +201,23 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgd335f59">1. Basic Concepts and Terminoloy</a>
+<li><a href="#org831dc9a">1. Basic Concepts and Terminoloy</a>
 <ul>
-<li><a href="#orgd0b0ffd">1.1. Scripts, Modules, Packages, and Libraries</a></li>
-<li><a href="#org7686613">1.2. Virtual Environments</a></li>
-<li><a href="#org00ad481">1.3. Class</a></li>
-<li><a href="#org9c5e733">1.4. Conda or venv</a>
+<li><a href="#org7b8bf37">1.1. Scripts, Modules, Packages, and Libraries</a></li>
+<li><a href="#org9df8d9d">1.2. Class</a></li>
+</ul>
+</li>
+<li><a href="#orgdf78de6">2. Version and IDE Management</a>
 <ul>
-<li><a href="#orgf2d21d6">1.4.1. Choosing Between `venv` and `conda`:</a></li>
-<li><a href="#org8f8b96b">1.4.2. Best Practices:</a></li>
+<li><a href="#org6b4c618">2.1. Virtual Environments</a>
+<ul>
+<li><a href="#orgd054164">2.1.1. How to Use VE</a></li>
+</ul>
+</li>
+<li><a href="#orgd1363ab">2.2. Conda or venv</a>
+<ul>
+<li><a href="#org01edb84">2.2.1. Choosing Between `venv` and `conda`:</a></li>
+<li><a href="#orgf2de29c">2.2.2. Best Practices:</a></li>
 </ul>
 </li>
 </ul>
@@ -217,12 +225,12 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd335f59" class="outline-2">
-<h2 id="orgd335f59"><span class="section-number-2">1.</span> Basic Concepts and Terminoloy</h2>
+<div id="outline-container-org831dc9a" class="outline-2">
+<h2 id="org831dc9a"><span class="section-number-2">1.</span> Basic Concepts and Terminoloy</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgd0b0ffd" class="outline-3">
-<h3 id="orgd0b0ffd"><span class="section-number-3">1.1.</span> Scripts, Modules, Packages, and Libraries</h3>
+<div id="outline-container-org7b8bf37" class="outline-3">
+<h3 id="org7b8bf37"><span class="section-number-3">1.1.</span> Scripts, Modules, Packages, and Libraries</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>Script: a Python file that is executable direclty. When run it, it should do something. Scripts often contains code written outside the scope of any classes or functions.</li>
@@ -235,24 +243,11 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org7686613" class="outline-3">
-<h3 id="org7686613"><span class="section-number-3">1.2.</span> Virtual Environments</h3>
+<div id="outline-container-org9df8d9d" class="outline-3">
+<h3 id="org9df8d9d"><span class="section-number-3">1.2.</span> Class</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
-<li>A isolated container with a Python interpreter, PIP executable, and site-package directory</li>
-<li>Many VE can be activated, which temporarily tricks the shell into thinking that the only Python and PIP executables are the ones that exist in the virtual environment</li>
-<li>Common practice is to use a different VE for each Python project
-<ul class="org-ul">
-<li>This is especially helpful when two different projects require different versions of the same package. Not even python -m pip can get around this.</li>
-</ul></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org00ad481" class="outline-3">
-<h3 id="org00ad481"><span class="section-number-3">1.3.</span> Class</h3>
-<div class="outline-text-3" id="text-1-3">
-<ul class="org-ul">
-<li>a blueprint for creating objects (a particular data structure), providing initial values for state (member variables or attributes), and implementations of behavior (member functions or methods)</li>
+<li>A class is a blueprint for creating objects (a particular data structure), providing initial values for state (member variables or attributes), and implementations of behavior (member functions or methods)</li>
 
 <li>How to use it
 <ol class="org-ol">
@@ -281,13 +276,67 @@ Define a Class
 </ul>
 </div>
 </div>
-<div id="outline-container-org9c5e733" class="outline-3">
-<h3 id="org9c5e733"><span class="section-number-3">1.4.</span> Conda or venv</h3>
-<div class="outline-text-3" id="text-1-4">
 </div>
-<div id="outline-container-orgf2d21d6" class="outline-4">
-<h4 id="orgf2d21d6"><span class="section-number-4">1.4.1.</span> Choosing Between `venv` and `conda`:</h4>
-<div class="outline-text-4" id="text-1-4-1">
+<div id="outline-container-orgdf78de6" class="outline-2">
+<h2 id="orgdf78de6"><span class="section-number-2">2.</span> Version and IDE Management</h2>
+<div class="outline-text-2" id="text-2">
+</div>
+<div id="outline-container-org6b4c618" class="outline-3">
+<h3 id="org6b4c618"><span class="section-number-3">2.1.</span> Virtual Environments</h3>
+<div class="outline-text-3" id="text-2-1">
+<ul class="org-ul">
+<li>A isolated container with a Python interpreter, PIP executable, and site-package directory</li>
+<li>Many VE can be activated, which temporarily tricks the shell into thinking that the only Python and PIP executables are the ones that exist in the virtual environment</li>
+<li>Common practice is to use a different VE for each Python project
+<ul class="org-ul">
+<li>This is especially helpful when two different projects require different versions of the same package. Not even python -m pip can get around this.</li>
+</ul></li>
+</ul>
+</div>
+<div id="outline-container-orgd054164" class="outline-4">
+<h4 id="orgd054164"><span class="section-number-4">2.1.1.</span> How to Use VE</h4>
+<div class="outline-text-4" id="text-2-1-1">
+<ol class="org-ol">
+<li>Open Terminal</li>
+<li>Update pip, setuptools, and wheel</li>
+</ol>
+<div class="org-src-container">
+<pre class="src src-python">python3 -m pip install --user --upgrade pip setuptools wheel
+</pre>
+</div>
+<ol class="org-ol">
+<li><p>
+Create a VE
+Navigate to your project directory where you want the virtual environment to be created. If you haven&rsquo;t created a project directory yet, you can create one with mkdir projectname and then navigate into it with cd projectname. Once you&rsquo;re in the project directory, create the virtual environment:
+</p>
+<div class="org-src-container">
+<pre class="src src-python">    python3 -m venv venv
+</pre>
+</div></li>
+<li><p>
+Activate the VE
+</p>
+<div class="org-src-container">
+<pre class="src src-python">   source venv/<span style="color: #c678dd;">bin</span>/activate
+</pre>
+</div></li>
+<li>Install Pacakges</li>
+
+<li>Deactivate the VE
+```
+deactivate
+```</li>
+</ol>
+</div>
+</div>
+</div>
+<div id="outline-container-orgd1363ab" class="outline-3">
+<h3 id="orgd1363ab"><span class="section-number-3">2.2.</span> Conda or venv</h3>
+<div class="outline-text-3" id="text-2-2">
+</div>
+<div id="outline-container-org01edb84" class="outline-4">
+<h4 id="org01edb84"><span class="section-number-4">2.2.1.</span> Choosing Between `venv` and `conda`:</h4>
+<div class="outline-text-4" id="text-2-2-1">
 <ul class="org-ul">
 <li><b>Specific Python Version:</b> Both conda and venv can be used to create environments with specific Python versions. With conda, you can directly specify the Python version when creating a new environment. With venv, you&rsquo;re typically using the Python version venv was created with, but you can install different versions of Python and then create venv environments with those versions.</li>
 
@@ -295,9 +344,9 @@ Define a Class
 </ul>
 </div>
 </div>
-<div id="outline-container-org8f8b96b" class="outline-4">
-<h4 id="org8f8b96b"><span class="section-number-4">1.4.2.</span> Best Practices:</h4>
-<div class="outline-text-4" id="text-1-4-2">
+<div id="outline-container-orgf2de29c" class="outline-4">
+<h4 id="orgf2de29c"><span class="section-number-4">2.2.2.</span> Best Practices:</h4>
+<div class="outline-text-4" id="text-2-2-2">
 <ul class="org-ul">
 <li><b>Stick to One:</b> Try to manage your project with either conda or venv/pip exclusively, if possible. This simplifies environment management and reduces the risk of dependency conflicts.</li>
 <li><b>Document Your Environment:</b> Whether you choose conda, venv, or a mix of conda and pip, document your environment setup and dependencies clearly. If using conda, you can export an environment file with conda env export &gt; environment.yml. If using venv, you can list your dependencies in a requirements.txt file with pip freeze &gt; requirements.txt.</li>
@@ -310,7 +359,7 @@ Define a Class
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Yubing Wan</p>
-<p class="date">Created: 2024-02-17 Sat 15:55</p>
+<p class="date">Created: 2024-02-17 Sat 16:29</p>
 </div>
 </body>
 </html>
