--- a/learn_python.html
+++ b/learn_python.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-17 Sat 16:29 -->
+<!-- 2024-02-17 Sat 16:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Python</title>
@@ -201,23 +201,23 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org831dc9a">1. Basic Concepts and Terminoloy</a>
+<li><a href="#org8e83e9a">1. Basic Concepts and Terminoloy</a>
 <ul>
-<li><a href="#org7b8bf37">1.1. Scripts, Modules, Packages, and Libraries</a></li>
-<li><a href="#org9df8d9d">1.2. Class</a></li>
+<li><a href="#orge26898f">1.1. Scripts, Modules, Packages, and Libraries</a></li>
+<li><a href="#orgbc0c533">1.2. Class</a></li>
 </ul>
 </li>
-<li><a href="#orgdf78de6">2. Version and IDE Management</a>
+<li><a href="#org908ac48">2. Version and IDE Management</a>
 <ul>
-<li><a href="#org6b4c618">2.1. Virtual Environments</a>
+<li><a href="#org03246a1">2.1. Virtual Environments</a>
 <ul>
-<li><a href="#orgd054164">2.1.1. How to Use VE</a></li>
+<li><a href="#org40b42de">2.1.1. How to Use VE</a></li>
 </ul>
 </li>
-<li><a href="#orgd1363ab">2.2. Conda or venv</a>
+<li><a href="#org2a65fcc">2.2. Conda or VE</a>
 <ul>
-<li><a href="#org01edb84">2.2.1. Choosing Between `venv` and `conda`:</a></li>
-<li><a href="#orgf2de29c">2.2.2. Best Practices:</a></li>
+<li><a href="#orge06c270">2.2.1. Choosing Between <b>venv</b> and <b>conda</b>:</a></li>
+<li><a href="#orgc38214a">2.2.2. Best Practices:</a></li>
 </ul>
 </li>
 </ul>
@@ -225,12 +225,12 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org831dc9a" class="outline-2">
-<h2 id="org831dc9a"><span class="section-number-2">1.</span> Basic Concepts and Terminoloy</h2>
+<div id="outline-container-org8e83e9a" class="outline-2">
+<h2 id="org8e83e9a"><span class="section-number-2">1.</span> Basic Concepts and Terminoloy</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org7b8bf37" class="outline-3">
-<h3 id="org7b8bf37"><span class="section-number-3">1.1.</span> Scripts, Modules, Packages, and Libraries</h3>
+<div id="outline-container-orge26898f" class="outline-3">
+<h3 id="orge26898f"><span class="section-number-3">1.1.</span> Scripts, Modules, Packages, and Libraries</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>Script: a Python file that is executable direclty. When run it, it should do something. Scripts often contains code written outside the scope of any classes or functions.</li>
@@ -243,8 +243,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org9df8d9d" class="outline-3">
-<h3 id="org9df8d9d"><span class="section-number-3">1.2.</span> Class</h3>
+<div id="outline-container-orgbc0c533" class="outline-3">
+<h3 id="orgbc0c533"><span class="section-number-3">1.2.</span> Class</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li>A class is a blueprint for creating objects (a particular data structure), providing initial values for state (member variables or attributes), and implementations of behavior (member functions or methods)</li>
@@ -277,12 +277,12 @@ Define a Class
 </div>
 </div>
 </div>
-<div id="outline-container-orgdf78de6" class="outline-2">
-<h2 id="orgdf78de6"><span class="section-number-2">2.</span> Version and IDE Management</h2>
+<div id="outline-container-org908ac48" class="outline-2">
+<h2 id="org908ac48"><span class="section-number-2">2.</span> Version and IDE Management</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org6b4c618" class="outline-3">
-<h3 id="org6b4c618"><span class="section-number-3">2.1.</span> Virtual Environments</h3>
+<div id="outline-container-org03246a1" class="outline-3">
+<h3 id="org03246a1"><span class="section-number-3">2.1.</span> Virtual Environments</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>A isolated container with a Python interpreter, PIP executable, and site-package directory</li>
@@ -293,49 +293,51 @@ Define a Class
 </ul></li>
 </ul>
 </div>
-<div id="outline-container-orgd054164" class="outline-4">
-<h4 id="orgd054164"><span class="section-number-4">2.1.1.</span> How to Use VE</h4>
+<div id="outline-container-org40b42de" class="outline-4">
+<h4 id="org40b42de"><span class="section-number-4">2.1.1.</span> How to Use VE</h4>
 <div class="outline-text-4" id="text-2-1-1">
 <ol class="org-ol">
 <li>Open Terminal</li>
-<li>Update pip, setuptools, and wheel</li>
-</ol>
+<li><p>
+Update pip, setuptools, and wheel
+</p>
 <div class="org-src-container">
-<pre class="src src-python">python3 -m pip install --user --upgrade pip setuptools wheel
+<pre class="src src-bash">   python3 -m pip install --user --upgrade pip setuptools wheel
 </pre>
-</div>
-<ol class="org-ol">
+</div></li>
 <li><p>
 Create a VE
 Navigate to your project directory where you want the virtual environment to be created. If you haven&rsquo;t created a project directory yet, you can create one with mkdir projectname and then navigate into it with cd projectname. Once you&rsquo;re in the project directory, create the virtual environment:
 </p>
 <div class="org-src-container">
-<pre class="src src-python">    python3 -m venv venv
+<pre class="src src-bash">   python3 -m venv venv
 </pre>
 </div></li>
 <li><p>
 Activate the VE
 </p>
 <div class="org-src-container">
-<pre class="src src-python">   source venv/<span style="color: #c678dd;">bin</span>/activate
+<pre class="src src-bash">   <span style="color: #c678dd;">source</span> venv/bin/activate
 </pre>
 </div></li>
 <li>Install Pacakges</li>
-
-<li>Deactivate the VE
-```
-deactivate
-```</li>
+<li><p>
+Deactivate the VE
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">   deactivate
+</pre>
+</div></li>
 </ol>
 </div>
 </div>
 </div>
-<div id="outline-container-orgd1363ab" class="outline-3">
-<h3 id="orgd1363ab"><span class="section-number-3">2.2.</span> Conda or venv</h3>
+<div id="outline-container-org2a65fcc" class="outline-3">
+<h3 id="org2a65fcc"><span class="section-number-3">2.2.</span> Conda or VE</h3>
 <div class="outline-text-3" id="text-2-2">
 </div>
-<div id="outline-container-org01edb84" class="outline-4">
-<h4 id="org01edb84"><span class="section-number-4">2.2.1.</span> Choosing Between `venv` and `conda`:</h4>
+<div id="outline-container-orge06c270" class="outline-4">
+<h4 id="orge06c270"><span class="section-number-4">2.2.1.</span> Choosing Between <b>venv</b> and <b>conda</b>:</h4>
 <div class="outline-text-4" id="text-2-2-1">
 <ul class="org-ul">
 <li><b>Specific Python Version:</b> Both conda and venv can be used to create environments with specific Python versions. With conda, you can directly specify the Python version when creating a new environment. With venv, you&rsquo;re typically using the Python version venv was created with, but you can install different versions of Python and then create venv environments with those versions.</li>
@@ -344,8 +346,8 @@ deactivate
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf2de29c" class="outline-4">
-<h4 id="orgf2de29c"><span class="section-number-4">2.2.2.</span> Best Practices:</h4>
+<div id="outline-container-orgc38214a" class="outline-4">
+<h4 id="orgc38214a"><span class="section-number-4">2.2.2.</span> Best Practices:</h4>
 <div class="outline-text-4" id="text-2-2-2">
 <ul class="org-ul">
 <li><b>Stick to One:</b> Try to manage your project with either conda or venv/pip exclusively, if possible. This simplifies environment management and reduces the risk of dependency conflicts.</li>
@@ -359,7 +361,7 @@ deactivate
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Yubing Wan</p>
-<p class="date">Created: 2024-02-17 Sat 16:29</p>
+<p class="date">Created: 2024-02-17 Sat 16:37</p>
 </div>
 </body>
 </html>
