--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <li><a href="learn_biostatistics.html">Biostatistics</a></li>
             <li><a href="learn_clinical_trials.html">Clinical Trials</a></li>
             <li><a href="learn_python.html">Programming in Python</a></li>
+            <li><a href="mysql.html">Programming in MySQL</a></li>
         </ul>
     </section>
 
