--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <h2>Tutorials</h2>
         <!-- Links to tutorial pages -->
         <ul>
-            <li><a href="learn_biomarker_analysis.html">Biomarker Analysis</a></li>
-            <li><a href="learn_biostatistics.html">Biostatistics</a></li>
-            <li><a href="learn_clinical_trials.html">Clinical Trials</a></li>
-            <li><a href="learn_python.html">Programming in Python</a></li>
-            <li><a href="mysql.html">Programming in MySQL</a></li>
+            <li><a href="tutorials/biomarker_analysis.html">Biomarker Analysis</a></li>
+            <li><a href="tutorials/biostatistics.html">Biostatistics</a></li>
+            <li><a href="tutorials/clinical_trials.html">Clinical Trials</a></li>
+            <li><a href="tutorials/python.html">Programming in Python</a></li>
+            <li><a href="tutorials/mysql.html">Programming in MySQL</a></li>
         </ul>
     </section>
 
