--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
     <section id="blogs">
         <h2>Blogs</h2>
         <!-- Links to blog pages or blog content -->
+        <ul>
+            <li><a href="https://yubingwan.substack.com/p/unlocking-the-mysteries-of-the-chinese">Unlocking the Mysteries of the Chinese Sexagenary Cycle</a></li>
+        </ul>
     </section>
 
     <section id="tutorials">
