--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Blogs</h2>
         <!-- Links to blog pages or blog content -->
         <ul>
-            <li><a href="https://yubingwan.substack.com/p/unlocking-the-mysteries-of-the-chinese">Unlocking the Mysteries of the Chinese Sexagenary Cycle</a></li>
+            <li><a href="https://yubingwan.substack.com/p/unlocking-the-mysteries-of-the-chinese/" target="_blank">Unlocking the Mysteries of the Chinese Sexagenary Cycle</a></li>
         </ul>
     </section>
 
